[package]

name = "start_piston"
version = "0.0.1"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Coeuvre <coeuvre@gmail.com>",
    "gmorenz",
    "leonkunert <info@leonkunert.de>",
    "mitchmindtree <me@michellnordine.com>",
    "Christiandh",
    "Apointos",
    "ccgn",
    "reem",
    "TyOverby <ty@pre-alpha.com>",
    "eddyb"
]

[lib]

name = "start_piston"
path = "./src/lib.rs"

[dependencies.piston]
git = "https://github.com/PistonDevelopers/piston"

[dependencies.vecmath]
git = "https://github.com/pistondevelopers/vecmath"
#version = "0.0.3"

[dependencies.shader_version]
git = "https://github.com/pistondevelopers/shader_version"
#version = "0.0.1"

[dependencies.piston3d-cam]
git = "https://github.com/pistondevelopers/cam"
#version = "0.0.1"

[dependencies.image]
git = "https://github.com/pistondevelopers/image"
#version = "~0.2.0"

[dependencies.fps_counter]
git = "https://github.com/pistondevelopers/fps_counter"
#version = "0.0.0"

[dependencies.piston2d-drag_controller]
git = "https://github.com/pistondevelopers/drag_controller"
#version = "0.0.1"

[dependencies.current]
git = "https://github.com/pistondevelopers/current"
#version = "0.0.5"

[dependencies.piston2d-graphics]
git = "https://github.com/pistondevelopers/graphics"
#version = "0.0.8"

[dependencies.piston2d-opengl_graphics]
git = "https://github.com/pistondevelopers/opengl_graphics"
#version = "0.0.6"

[dependencies.piston2d-gfx_graphics]
optional = true
git = "https://github.com/pistondevelopers/gfx_graphics"
#version = "0.0.2"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"
#version = "0.0.1"

[dependencies.sdl2]
git = "https://github.com/AngryLawyer/rust-sdl2"
#version = "0.0.19"

[dependencies.gfx]
optional = true
git = "https://github.com/gfx-rs/gfx-rs"
#version = "0.1.0"

[features]
default = []
include_gfx = ["gfx", "piston2d-gfx_graphics"]

