[package]

name = "start_piston"
version = "0.0.1"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Coeuvre <coeuvre@gmail.com>",
    "gmorenz",
    "leonkunert <info@leonkunert.de>",
    "mitchmindtree <me@michellnordine.com>",
    "Christiandh",
    "Apointos",
    "ccgn",
    "reem",
    "TyOverby <ty@pre-alpha.com>",
    "eddyb"
]

[lib]

name = "start_piston"
path = "./src/lib.rs"

[dependencies.piston]
git = "https://github.com/PistonDevelopers/piston"

[dependencies.shader_version]
git = "https://github.com/pistondevelopers/shader_version"
#version = "0.0.1"

[dependencies.fps_counter]
git = "https://github.com/pistondevelopers/fps_counter"
#version = "0.0.0"

[dependencies.current]
git = "https://github.com/pistondevelopers/current"
#version = "0.0.5"

[dependencies.piston2d-graphics]
git = "https://github.com/pistondevelopers/graphics"
#version = "0.0.8"

[dependencies.piston2d-opengl_graphics]
git = "https://github.com/pistondevelopers/opengl_graphics"
#version = "0.0.6"

[dependencies.piston2d-gfx_graphics]
optional = true
git = "https://github.com/pistondevelopers/gfx_graphics"
#version = "0.0.2"

[dependencies.pistoncore-sdl2_window]
optional = true
git = "https://github.com/pistondevelopers/sdl2_window"
#version = "0.0.1"

[dependencies.pistoncore-glfw_window]
optional = true
git = "https://github.com/pistondevelopers/glfw_window"
#version = "0.0.0"

[dependencies.pistoncore-glutin_window]
optional = true
git = "https://github.com/pistondevelopers/glutin_window"
#version = "0.0.0"

[dependencies.sdl2]
optional = true
git = "https://github.com/AngryLawyer/rust-sdl2"
#version = "0.0.19"

[dependencies.glfw]
optional = true
git = "https://github.com/bjz/glfw-rs"
#version = "0.0.0"

[dependencies.glutin]
optional = true
git = "https://github.com/tomaka/glutin"
#version = "0.0.0"

[dependencies.gfx]
optional = true
git = "https://github.com/gfx-rs/gfx-rs"
#version = "0.1.0"

[dependencies.gfx_device_gl]
optional = true
git = "https://github.com/gfx-rs/gfx_device_gl"

[dependencies]
libc = "*"

[features]
default = []
include_gfx = ["gfx", "gfx_device_gl", "piston2d-gfx_graphics"]
include_sdl2 = ["sdl2", "pistoncore-sdl2_window"]
include_glfw = ["glfw", "pistoncore-glfw_window"]
include_glutin = ["glutin", "pistoncore-glutin_window"]
include_gfx_sdl2 = ["include_gfx", "include_sdl2"]
include_gfx_glfw = ["include_gfx", "include_glfw"]
include_gfx_glutin = ["include_gfx", "include_glutin"]

