[package]

name = "start_piston"
version = "0.0.7"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Coeuvre <coeuvre@gmail.com>",
    "gmorenz",
    "leonkunert <info@leonkunert.de>",
    "mitchmindtree <me@michellnordine.com>",
    "Christiandh",
    "Apointos",
    "ccgn",
    "reem",
    "TyOverby <ty@pre-alpha.com>",
    "eddyb"
]

[lib]

name = "start_piston"
path = "./src/lib.rs"

[dependencies]
libc = "*"
piston = "0.2.0"
piston2d-graphics = "0.1.4"
shader_version = "0.1.0"
fps_counter = "0.1.0"
current = "0.1.0"

[dependencies.piston2d-opengl_graphics]
optional = true
version = "0.1.0"

[dependencies.piston2d-gfx_graphics]
optional = true
version = "0.1.22"

[dependencies.pistoncore-sdl2_window]
optional = true
version = "0.2.0"

[dependencies.pistoncore-glfw_window]
optional = true
version = "0.2.0"

[dependencies.pistoncore-glutin_window]
optional = true
version = "0.2.0"

[dependencies.sdl2]
optional = true
version = "0.4.0"

[dependencies.glfw]
optional = true
version = "0.1.0"

[dependencies.glutin]
optional = true
version = "0.1.6"

[dependencies.gfx]
optional = true
version = "0.6.3"

[dependencies.gfx_device_gl]
optional = true
version = "0.4.0"

[dependencies.piston2d-glium_graphics]
optional = true
version = "0.1.0"

[features]
default = []
include_opengl = ["piston2d-opengl_graphics"]
include_gfx = ["gfx", "gfx_device_gl", "piston2d-gfx_graphics"]
include_glium = ["piston2d-glium_graphics"]
include_sdl2 = ["sdl2", "pistoncore-sdl2_window"]
include_glfw = ["glfw", "pistoncore-glfw_window"]
include_glutin = ["glutin", "pistoncore-glutin_window"]
